Refactored build method to make it more efficient with large data set.
git-svn-id: https://rabbit-eclipse.googlecode.com/svn/branches/1.3-dev@342 03b96cd2-0a55-11df-9859-c12d74d802c5